<resources>
    <string name="admob_ads_id">ca-app-pub-5606966984883396~7037086141</string>
    <string name="in_developing">In development</string>
    <string name="app_name">Hedbanz</string>
    <string name="bundle_room_id">bundle_room_id</string>
    <string name="bundle_room_password">bundle_room_password</string>
    <string name="bundle_is_after_creation">bundle_is_after_creation</string>
    <string name="bundle_is_active_game">bundle_is_active_game</string>
    <string name="bundle_room_data">bundle_room_data</string>
    <string name="bundle_is_language_after_start">bundle_is_language_after_start</string>
    <string name="salt">$2a$10$3L8fxrPhH3/qLYhjmsuEku</string>
    <string name="tag_fragment_user_details">tag_fragment_user_details</string>
    <string name="tag_fragment_invite">tag_fragment_invite</string>
    <string name="tag_fragment_forgot_password">tag_fragment_forgot_password</string>
    <string name="tag_fragment_check_keyword">tag_fragment_check_keyword</string>
    <string name="tag_fragment_reset_password">tag_fragment_reset_password</string>
    <string name="action_enter">Enter</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_reload">Try again</string>
    <string name="action_loading">Loading&#8230;</string>
    <string name="action_accept">Accept</string>
    <string name="action_decline">Decline</string>
    <string name="action_update">Update</string>
    <string name="action_later">Later</string>
    <string name="error_server">Looks like we have problems with server. Try again later.</string>
    <string name="error_network">No internet connection.</string>
    <string name="error_empty_list">List is empty</string>
    <string name="error_action_retry">Try again</string>
    <string name="error_undefined_error">Houston, we have problems! Server error happen.</string>
    <string name="login_intro">Hurry up, your friends is waiting for you!</string>
    <string name="login_hint">e.g. HedbanzUser2000</string>
    <string name="login_password_hint">*********</string>
    <string name="login_title">Login</string>
    <string name="login_password_title">Password</string>
    <string name="login_password_recovery">Forgot password?</string>
    <string name="login_register_intro">For the first time with us? You will have to go through the registration stage. Do not worry, this is very fast procedure.</string>
    <string name="login_register_button">Register</string>
    <string name="login_error_empty_field">Oops! You missed this field :(</string>
    <string name="login_error_no_such_login">User with such login does not exist!</string>
    <string name="login_error_incorrect_password">Invalid password entered. In case of amnesia, use the password recovery function below!</string>
    <string name="login_error_email_not_available">Fiasco, еmail is already in use by another user.</string>
    <string name="login_error_login_not_available"> Fiasco, user with such login already exists.</string>
    <string name="login_error_login_available">Login is free!</string>
    <string name="register_intro">Registration</string>
    <string name="register_email_title">Email address</string>
    <string name="register_email_hint">e.g. hedbanz@example.com</string>
    <string name="register_confirm_password">Password confirmation </string>
    <string name="register_action_submit">Submit</string>
    <string name="register_validate_empty_field">Oops, you missed this field.</string>
    <string name="register_validate_email">This is an incorrect email address. You made a mistake somewhere.</string>
    <string name="register_validate_password">This is an incorrect password. Valid length is from 6 to 14 characters.</string>
    <string name="register_validate_confirm_password">Wrong password confirmation.</string>
    <string name="register_validate_login">Incorrect password. Length 3&#8211;10 characters. Only letters, digits and dots are acceptable (\".\")</string>
    <string name="main_menu_new_version_title">New game version is available</string>
    <string name="main_menu_new_version_message">Do you want to install the latest game version?</string>
    <string name="rooms_title">List of rooms</string>
    <string name="rooms_apply_filters">Apply filter</string>
    <string name="rooms_max_players_title">Maximal number of players</string>
    <string name="rooms_max_players_from">from</string>
    <string name="rooms_max_players_to">to</string>
    <string name="rooms_search_hint">My_room or #100500&#8230;</string>
    <string name="rooms_with_password">With password</string>
    <string name="rooms_password_title">Enter password from the room</string>
    <string name="rooms_active">Active</string>
    <string name="room_is_full">Room is full. Try to enter another one room.</string>
    <string name="room_cant_start_game">Can’t start game. Problems with server.</string>
    <string name="room_game_already_started">Can’t join to players. Game is already started</string>
    <string name="room_user_has_max_active_rooms_number"> You have reached the maximum allowed number of simultaneous active games. Finish them first.</string>
    <string name="room_user_already_in_room">Server error, try again later.</string>
    <string name="room_unable_to_restart_game">Unable to restart game. Maybe you didn\'t finish previous one? If everything OK, try to create new room.</string>
    <string name="room_unauthorized_player">You are not authorized user.</string>
    <string name="rooms_unauthorized_user"> You are not authorized user. Sign in to your account again please</string>
    <string name="room_creation_title">Create room</string>
    <string name="room_creation_room_name">Room name</string>
    <string name="room_creation_players_count">Number of players</string>
    <string name="room_creation_1_player">%1$d player</string>
    <string name="room_creation_4_players">%1$d players</string>
    <string name="room_creation_8_players">%1$d players </string>
    <string name="room_creation_name_example">e.g. Game is coming!</string>
    <string name="room_creation_action_create">Create</string>
    <string name="room_creation_error_password_incorrect">Incorrect password. Valid length is from 6 to 14 characters.</string>
    <string name="room_creation_error_password_empty">Enter password from the room</string>
    <string name="room_creation_error_name_empty">Enter room name</string>
    <string name="room_creation_error_name_already_exist">Room with such name already exist</string>
    <string name="room_creation_error_creating">Couldn’t create room. Server error. Try again later.</string>
    <string name="room_creation_error_invalid_password">Invalid password :(</string>
    <string name="menu_title">Profile</string>
    <string name="menu_games_played">Games played</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_money">Sticoins</string>
    <string name="menu_action_credentials">My details</string>
    <string name="menu_action_friends">My friends</string>
    <string name="menu_action_shop">Shop</string>
    <string name="menu_action_help">Help</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_rate">Rate</string>
    <string name="menu_action_feedback">Report a bug</string>
    <string name="menu_action_logout">Logout</string>
    <string name="menu_logout_error_title">Error happen</string>
    <string name="menu_logout_server_error"> Looks like we have problems with server. Try again later.</string>
    <string name="menu_logout_network_error">Check your internet connection and try to logout again.</string>
    <string name="credentials_title">My details</string>
    <string name="credentials_old_password">Old password</string>
    <string name="credentials_new_password">New password</string>
    <string name="credentials_confirm_new_password">Confirm new password</string>
    <string name="credentials_action_save_data">Update details</string>
    <string name="credentials_error_confirm_password">Wrong password confirmation.</string>
    <string name="credentials_update_success">Your details updated successfully!</string>
    <string name="game_starts">Everybody in the room.\n Let the great game begin!</string>
    <string name="game_typing_one_user">%1$s typing</string>
    <string name="game_typing_two_user">%1$s и %2$s typing</string>
    <string name="game_typing_several_users">Several players typing</string>
    <string name="game_user_joined">%1$s entered the room</string>
    <string name="game_user_left">%1$s left the room</string>
    <string name="game_et_hint">Text message</string>
    <string name="game_set_word_title">It’s time to set a word to player %1$s</string>
    <string name="game_set_word_title_random">It’s time to set a word to random player</string>
    <string name="game_set_word_hint">Your word&#8230;</string>
    <string name="game_word_setting_error"> You did not enter a word to the player</string>
    <string name="game_set_word_start_text">Am I</string>
    <string name="game_word_setted">Player %1$s set word to player %2$s</string>
    <string name="game_word_setted_to_current_user">Player %1$s set word to you</string>
    <string name="game_word_current_user_setted">You set word to player %1$s</string>
    <string name="game_error_disconnected">Waiting for connection&#8230;</string>
    <string name="game_error_reconnecting">Connecting&#8230;</string>
    <string name="game_error_reconnected">Connection restored!</string>
    <string name="game_user_afk">Player %1$s out for a bit</string>
    <string name="game_user_returned">Player %1$s again in the game</string>
    <string name="game_some_user_afk">Some player out for a bit </string>
    <string name="game_some_user_returned">Some player again in the game </string>
    <string name="game_action_restore_room">Continue</string>
    <string name="game_action_leave_room">Leave guys</string>
    <string name="game_restore_room_title">You have an active game!</string>
    <string name="game_restore_room_message">Something went wrong and you left this room. Do you want to join back to this room?</string>
    <string name="game_exit_room_message">Are you 100% sure want to leave this room? Your friends can don’t understand you correctly&#8230;</string>
    <string name="game_exit_room_message_active"> Are you 100% sure want to leave this room? While other players in this room you still can join back to this room.</string>
    <string name="game_exit_room_title">Quit or not to quit, that is the question&#8230;</string>
    <string name="game_action_resume_game">Continue</string>
    <string name="game_action_exit_game">Leave guys</string>
    <string name="game_action_exit_game_active">Join back later</string>
    <string name="game_menu_this_user">You</string>
    <string name="game_kicked_title">You are kicked out of room</string>
    <string name="game_kicked_message">You were absent in game on setting word stage for a long time, that is why you have been kicked out from room. You can create another room, or join to other players.</string>
    <string name="game_toolbar_open_menu_content_description">Open menu</string>
    <string name="game_toolbar_close_menu_content_description">Close menu</string>
    <string name="game_menu_friend">Friend</string>
    <string name="game_afk">AFK</string>
    <string name="game_last_player_title">You are the last player in the room</string>
    <string name="game_over_title">Game over.\n All players guessed their words.</string>
    <string name="game_restart_question">Do you want to repeat game with this team?</string>
</resources>