<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stickButton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_full_background"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon_tuesday_font_family"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLoginIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAppName"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/login_intro"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rlLoginFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/login_frame_background"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/login_title"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_login"
                android:drawablePadding="8dp"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etLogin"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/login_password_title"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPasswordTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />
        </RelativeLayout>

        <com.transcendensoft.hedbanz.view.custom.StickerButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/rlLoginFrame"
            stickButton:text="@string/action_enter"/>
    </RelativeLayout>
</ScrollView>