<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/ivSeparator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/register_divider" />

    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSeparator"
        android:layout_marginTop="-48dp"
        android:gravity="center"
        android:text="@string/game_over_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRestartGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGameOver"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:maxWidth="300dp"
        android:text="@string/game_restart_question"
        android:textColor="@color/textPrimary"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRestartGameText"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button_bg"
            android:text="@string/action_no" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/restart_button_bg"
            android:text="@string/action_yes"
            android:textColor="@color/textSecondaryDark" />
    </LinearLayout>

</RelativeLayout>