<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="28dp"
    android:background="@color/transparent"
    android:layout_marginRight="32dp"
    android:foregroundGravity="center"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/tvPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topSpace"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/rooms_password_title"
            android:textColor="@color/textDarkRed" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPasswordTitle"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_password_private_room"
            android:drawablePadding="8dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvErrorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_error_validation"
            android:paddingLeft="16dp"
            android:textColor="@color/loginError"
            android:textSize="11sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSubmitRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvErrorPassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_white_round"
            android:elevation="8dp"
            android:fontFamily="@font/playfair_display_sc_bold"
            android:text="@string/register_action_submit"
            android:textColor="@color/textSecondaryDark" />
    </RelativeLayout>
</RelativeLayout>