<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/rlCredentialsFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="56dp"
        android:foregroundGravity="center"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/form_background"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="8dp">

            <Space
                android:id="@+id/topSpace"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topSpace"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/login_title"
                android:textColor="@color/textDarkRed" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_login"
                android:drawablePadding="8dp"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvErrorLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etLogin"
                android:drawableRight="@drawable/ic_error_validation"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textColor="@color/loginError"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvLoginAvailability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etLogin"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textSize="11sp"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/pbLoginLoading"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@id/etLogin"
                android:layout_alignParentRight="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvEmailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginAvailability"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/register_email_title"
                android:textColor="@color/textDarkRed" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmailTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvErrorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:drawableRight="@drawable/ic_error_validation"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textColor="@color/loginError"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvOldPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvErrorEmail"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/credentials_old_password"
                android:textColor="@color/textDarkRed" />

            <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOldPasswordTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvErrorOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etOldPassword"
                android:drawableRight="@drawable/ic_error_validation"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textColor="@color/loginError"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvNewPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvErrorOldPassword"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/credentials_new_password"
                android:textColor="@color/textDarkRed" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNewPasswordTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvErrorNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etNewPassword"
                android:drawableRight="@drawable/ic_error_validation"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textColor="@color/loginError"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvConfirmPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvErrorNewPassword"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/credentials_confirm_new_password"
                android:textColor="@color/textDarkRed" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConfirmPasswordTitle"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_confirm_password"
                android:drawablePadding="8dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvErrorConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etConfirmPassword"
                android:drawableRight="@drawable/ic_error_validation"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:textColor="@color/loginError"
                android:textSize="11sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnUpdateCredentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvErrorConfirmPassword"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_white_round"
                android:elevation="8dp"
                android:fontFamily="@font/playfair_display_sc_bold"
                android:text="@string/credentials_action_save_data"
                android:textColor="@color/textSecondaryDark" />

            <Space
                android:id="@+id/bottomSpace"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/btnUpdateCredentials" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
